[package]
name = "tri"
version = "0.1.0"
edition = "2021"
description = "Playwright-style test orchestrator for CWR game instances"
license = "MIT"
rust-version = "1.79"

[dependencies]
clap = { version = "4", features = ["derive", "env", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rustyline = "17.0.2"
dotenvy = "0.15.7"
tempfile = "3"
toml = "1.0.7"
glob = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
papa-bear-archive = { path = "../../mserver/Archive" }
papa-bear-client = { path = "../../mserver/Client" }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
